feat: migrate old card view preference data + show proper error
