# api.yaml
@@ -36,11 +36,11 @@ paths:
                         properties:
                           start:
                             examples:
-                              - 1766200995584
+                              - 1766524810697
                             type: number
                           end:
                             examples:
-                              - 1766200995584
+                              - 1766524810697
                             type: number
                         required:
                           - start
@@ -106,6 +106,11 @@ paths:
                       type: boolean
                     id:
                       type: string
+                    conceptId:
+                      nullable: true
+                      anyOf:
+                        - type: string
+                        - type: "null"
                   required:
                     - times
                     - todaysSoups
@@ -120,6 +125,7 @@ paths:
                     - coordinateLng
                     - acceptsOnlineOrders
                     - id
+                    - conceptId
       operationId: getApiV2Locations
   /api/emails:
     get:
